--- a/src/main/resources/static-resources/css/common.css
+++ b/src/main/resources/static-resources/css/common.css
@@ -69,7 +69,7 @@ body {
 }
 
 .nav-menu .dd-menu {
-  min-width: 200px;
+  min-width: 15rem;
   z-index: 9999;
 }
 
@@ -138,7 +138,7 @@ body {
   border: 2px solid rgba(0, 229, 255, 0.3);
   border-radius: 12px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-  max-height: 240px;
+  max-height: 20rem;
   overflow: auto;
   display: none;
 }
