--- a/src/main/resources/static-resources/css/index.css
+++ b/src/main/resources/static-resources/css/index.css
@@ -474,7 +474,7 @@ body {
 
 .cell-id {
   font-weight: bold;
-  color: var(--muted);
+  /* color: var(--muted); */
   font-size: 1.1em;
   padding-left: 0.5em;
 }
@@ -509,7 +509,7 @@ body {
 
 .player-move-count {
   font-weight: bold;
-  color: var(--muted);
+  /* color: var(--muted); */
   font-size: 0.9em;
   padding-right: 0.5em;
 }
