--- a/src/main/resources/static-resources/css/leader-board.css
+++ b/src/main/resources/static-resources/css/leader-board.css
@@ -160,6 +160,19 @@ body {
   white-space: nowrap;
 }
 
+.games-table tbody a.game-log-link {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 600;
+  transition: color 0.2s ease;
+}
+
+.games-table tbody a.game-log-link:hover,
+.games-table tbody a.game-log-link:focus-visible {
+  color: var(--neon-cyan);
+  text-decoration: underline;
+}
+
 .leader-table tbody tr,
 .games-table tbody tr {
   cursor: pointer;
