--- a/src/main/resources/static-resources/css/game-action-log.css
+++ b/src/main/resources/static-resources/css/game-action-log.css
@@ -100,6 +100,18 @@
   border-bottom: 1px solid rgba(0, 229, 255, 0.12);
 }
 
+.log-list-table tbody a.log-player-link {
+  color: inherit;
+  text-decoration: none;
+  /* font-weight: 600; */
+}
+
+.log-list-table tbody a.log-player-link:hover,
+.log-list-table tbody a.log-player-link:focus-visible {
+  color: var(--neon-cyan);
+  text-decoration: underline;
+}
+
 .game-list-table tbody tr,
 .log-list-table tbody tr {
   cursor: pointer;
