--- a/src/main/resources/static-resources/css/game-action-log.css
+++ b/src/main/resources/static-resources/css/game-action-log.css
@@ -103,7 +103,6 @@
 .log-list-table tbody a.log-player-link {
   color: inherit;
   text-decoration: none;
-  /* font-weight: 600; */
 }
 
 .log-list-table tbody a.log-player-link:hover,
@@ -127,6 +126,14 @@
 .log-list-table tbody tr.selected {
   background: rgba(255, 255, 255, 0.08);
   box-shadow: inset 0 0 0 0.075rem rgba(0, 229, 255, 0.45);
+}
+
+.log-list-table tbody tr.log-row-model-prompt {
+  background: rgba(236, 172, 32, 0.17);
+}
+
+.log-list-table tbody tr.log-row-model-prompt:hover {
+  background: rgba(0, 229, 255, 0.16);
 }
 
 .game-list-empty-row td,
